fixed mistake at class name

--- a/lesson18/tasks/task07.html
+++ b/lesson18/tasks/task07.html
@@ -174,7 +174,7 @@
 					</div>
 					<div class="trip-guides">
 						<div class="trip-guide">
-							<label for="guid-1" title="ціна 200">Петро Порубаний</label>
+							<label for="guide-1" title="ціна 200">Петро Порубаний</label>
 							<input class="guide" value="200" type="radio" name="guide-1" id="guide-1">
 						</div>
 						<div class="trip-guide">
@@ -214,7 +214,7 @@
 					</div>
 					<div class="trip-guides">
 						<div class="trip-guide">
-							<label for="guid-4" title="ціна 180">Федір Убогий</label>
+							<label for="guide-4" title="ціна 180">Федір Убогий</label>
 							<input class="guide" value="180" type="radio" name="guide-2" id="guide-4">
 						</div>
 						<div class="trip-guide">
@@ -254,7 +254,7 @@
 					</div>
 					<div class="trip-guides">
 						<div class="trip-guide">
-							<label for="guid-7" title="ціна 99">Максим Неборак</label>
+							<label for="guide-7" title="ціна 99">Максим Неборак</label>
 							<input class="guide" value="99" type="radio" name="guide-3" id="guide-7">
 						</div>
 						<div class="trip-guide" title="ціна 200">
