--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson19/index.html">Домашні завдання (Урок № 20).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson19/index.html">Домашні завдання (Урок № 19).</a>
 				</li>
 				<li>
