--- a/lesson20/index.html
+++ b/lesson20/index.html
@@ -76,19 +76,29 @@
 		<h1>Домашні завдання (Урок 20).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Сяючі зорі. Вказана кількість зірочок повинна з’являтися
+					у випадковій частині екрана. Кожна зірка (це екземпляр класу Star) з певним кроком і інтервалом збільшується
+					від мінімального до максимального розміру. Як тільки досягнути максимального розміру зірочка повинна
+					з’являтися у іншій випадковій позиції.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Байрактар. З верхньої частини екрану у випадковій
+					позиції по горизонталі з’являються танки, які їдуть вниз. При кліку на танк він вибухає і зникає з екрану.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3. На формі вводять 7 числових значень (вік, зріст, вага,
+					заробітна плата, стаж, номер відділу, порядковий номер). Додати подію обробки події click на форму і якщо клік
+					на внутрішньому input, то автоматично замінювати значення його на 0. Використати делегування.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача 4. На сторінці міститься певна кількість кнопок і інпутів.
+					Підраховувати загальну кількість кліків окремо на кнопках і окремо на інпутах.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task05.html"></a>
+				<a target="_blank" href="./tasks/task05.html">Задача 5. Дано перелік товарів у кошику. При зміні кількості
+					одиниць товару збільшувати загальну вартість. Створити клас Product, що призначений для маніпуляцій товаром та
+					клас ProductManager що оперує з усіма товарами (через подію передвати ідентифікатор товару та операцію, що
+					зроблена).</a>
 			</li>
 		</ol>
 	</div>
