--- a/lesson20/tasks/task02.html
+++ b/lesson20/tasks/task02.html
@@ -15,24 +15,6 @@
 			border: none;
 		}
 
-		h1,
-		h2,
-		h3,
-		h4,
-		h5,
-		h6 {
-			font-weight: inherit;
-			font-size: inherit;
-		}
-
-		h1 {
-			font-size: 32px;
-			line-height: 1.2;
-			text-align: center;
-			font-weight: 600;
-			margin-bottom: 30px;
-		}
-
 		body,
 		html {
 			height: 100%;
@@ -47,15 +29,110 @@
 			padding-bottom: 10px;
 			font-size: 20px;
 		}
+
+		.task-title {
+			position: fixed;
+			width: 100%;
+			top: 0;
+			left: 0;
+			opacity: 0.3;
+			font-size: 32px;
+			line-height: 1.2;
+			text-align: center;
+			font-weight: 600;
+		}
+
+		.tanks-container {
+			height: 100%;
+		}
+
+		.tank-img {
+			max-width: 100px;
+			position: absolute;
+		}
 	</style>
 	<script>
+		class Tank {
+			constructor({ imgSrc }) {
+				this.imgSrc = imgSrc
+				this.interval = this.getRandomValue(1000, 3000)
+			}
+			getRandomValue(min = 5, max = 95) {
+				return min + Math.floor(Math.random() * (max - min + 1))
+			}
+			setRandomPosition() {
+				this.el.style.left = this.getRandomValue() + '%'
+				this.el.style.top = 0 + 'px'
+			}
+			setRandomSpeed() {
+				let currentPosition = parseInt(this.el.style.top)
+				let step = this.getRandomValue()
+				this.el.style.top = currentPosition + step + 'px'
+			}
+			render(containerSelector) {
+				const el = document.createElement('img')
+				el.setAttribute('src', this.imgSrc)
+				el.className = 'tank-img'
+				this.el = el
+				this.setRandomPosition()
 
+				if (containerSelector)
+					document.querySelector(containerSelector).append(el)
+
+				return el
+			}
+		}
+
+		class TankGame {
+			constructor(tankList) {
+				this.tankList = tankList
+			}
+			onShot(event) {
+				const currentEl = event.target
+				currentEl.setAttribute('src', 'https://www.svgrepo.com/show/411173/explode.svg')
+				setTimeout(() => {
+					currentEl.remove()
+				}, 500)
+			}
+			render(containerSelector) {
+				const el = document.createElement('div')
+				el.className = 'tanks-container'
+
+				for (const tank of tankList) {
+					const tankObj = new Tank(tank)
+					el.append(tankObj.render())
+
+					setInterval(() => {
+						tankObj.setRandomSpeed()
+					}, tankObj.interval)
+
+					tankObj.el.addEventListener('click', this.onShot.bind(this))
+				}
+
+				if (containerSelector)
+					document.querySelector(containerSelector).append(el)
+			}
+		}
+		const tankList = [
+			{ imgSrc: 'https://cdn-icons-png.flaticon.com/128/6175/6175885.png?ga=GA1.1.829814201.1694193181' },
+			{ imgSrc: 'https://cdn-icons-png.flaticon.com/128/6175/6175455.png?ga=GA1.1.829814201.1694193181' },
+			{ imgSrc: 'https://cdn-icons-png.flaticon.com/128/6175/6175507.png?ga=GA1.1.829814201.1694193181' },
+			{ imgSrc: 'https://cdn-icons-png.flaticon.com/128/6175/6175507.png?ga=GA1.1.829814201.1694193181' },
+			{ imgSrc: 'https://cdn-icons-png.flaticon.com/128/6175/6175761.png?ga=GA1.1.829814201.1694193181' },
+			{ imgSrc: 'https://cdn-icons-png.flaticon.com/128/6175/6175466.png?ga=GA1.1.829814201.1694193181' },
+		]
+		window.onload = function () {
+			const bayraktar = new TankGame(tankList)
+			bayraktar.render('.task-container')
+		}
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h1></h1>
-		<div class="task-container"></div>
+		<h2 class="task-title">Задача 2. Байрактар. З верхньої частини екрану у випадковій позиції по горизонталі
+			з’являються танки, які їдуть вниз. При кліку на танк він вибухає і зникає з екрану.</h2>
+		<div class="task-container">
+		</div>
 	</div>
 </body>
 </html>
