--- a/lesson20/tasks/task02.html
+++ b/lesson20/tasks/task02.html
@@ -42,6 +42,14 @@
 			font-weight: 600;
 		}
 
+		.container {
+			max-width: 1100px;
+			margin: 0 auto;
+			padding-left: 15px;
+			padding-right: 15px;
+			height: 100%;
+		}
+
 		.tanks-container {
 			height: 100%;
 		}
